tests/baselines/reference/unusedClassesinNamespace4.errors.txt
tests/cases/compiler/unusedClassesinNamespace4.ts(10,5): error TS6133: 'c3' is declared but its value is never read.


==== tests/cases/compiler/unusedClassesinNamespace4.ts (1 errors) ====
    namespace Validation {
        class c1 {
    
        }
    
        export class c2 {
    
        }
    
        class c3 extends c1 {
        ~~~~~~~~
!!! error TS6133: 'c3' is declared but its value is never read.
    
        }
    }